[package]
name = "sixpence"
version = "0.0.1"
description = "An accounting tool for hackers"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[dependencies]
bincode = "1.3"
chrono = { version = "0.4", features = [ "alloc", "clock", "serde", "std" ] }
paw = "1.0"
platform-dirs = "0.3"
serde = { version = "1.0", features = [ "derive", "rc", "std" ] }
structopt = { version = "0.3", features = [ "paw" ] }
ulid = { version = "0.5", features = [ "serde", "std" ] }

[[bin]]
name = "sixp"
path = "src/main.rs"

