[package]
name = "sixpence"
version = "0.0.1"
description = "An accounting tool for hackers"
authors = ["Z. Charles Dziura <zachary@dziura.email>"]
edition = "2021"
license = "BSD-3-Clause"
publish = false

[dependencies]
bincode = "1.3"
chrono = { version = "0.4.19", features = ["alloc", "clock", "serde", "std"] }
clap = { version = "3.1.18", features = ["default", "derive"] }
dirs = "4.0.0"
pad = "0.1"
serde = { version = "1.0", features = ["derive", "rc", "std"] }
ulid = { version = "0.5", features = ["serde", "std"] }

[[bin]]
name = "sixp"
path = "src/main.rs"

[features]
